fix(style): Fix the font-size to be default to the all site and add more default styles to be more readable.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@
 }
 
 .intro-text {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     padding-left: 1.3rem;
     padding-right: 1.3rem;
 }
@@ -108,6 +108,7 @@
     display: flex;
     gap: 20px;
     overflow-x: scroll;
+    overflow-y: hidden;
     height: 400px;
 }
 
@@ -117,6 +118,16 @@
 
 .card-text {
     font-size: 0.85rem;
+}
+
+.breakfast-intro p,
+.lunch-intro p,
+.dinner-intro p {
+    font-size: 1.2rem;
+}
+
+.container-lg.row {
+    gap: 20px;
 }
 /* Cards Default Ends */
 
@@ -128,6 +139,9 @@
 /* Breakfast Ends */
 
 /* Lunch Starts */
+.lunch-intro.col {
+    order: 1;
+}
 /* Lunch Ends */
 
 /* Dinner Starts */
@@ -171,7 +185,9 @@
     .title {
         font-size: 2.5rem;
     }
-    .breakfast-intro p {
+    .breakfast-intro p,
+    .lunch-intro p,
+    .dinner-intro p {
         font-size: 0.85rem;
     }
 
@@ -260,7 +276,9 @@
     .title {
         font-size: 2rem;
     }
-    .breakfast-intro p {
+    .breakfast-intro p,
+    .lunch-intro p,
+    .dinner-intro p {
         font-size: 0.75rem;
     }
 
